# swot-analyzer

./: .gitmodules
public-swot/: main.html  styles.css
public-swot/backend/: main.py  requirements.txt
public-swot/frontend/: package-lock.json  package.json
public-swot/frontend/public/: index.html
public-swot/frontend/src/: App.jsx
swot-analyzer/: package-lock.json  package.json
swot-analyzer/src/: App.css  App.jsx
swot-analyzer/src-tauri/: Cargo.toml  tauri.conf.json
swot-analyzer/src-tauri/capabilities/: default.json
swot-analyzer/src-tauri/icons/: icon.icns
swot-analyzer/src-tauri/src/: main.rs
