[package]
name = "swot-analyzer"
version = "0.1.0"
description = "A local company analysis tool"
authors = ["Molly Ho"]
license = "UC Berkeley"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
csv = "1.3"
pdf-extract = "0.7"
printpdf = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
